# EEGMamba

./: .gitignore  PhysioNet_MI_Finetuning_Test.ipynb  README.md  TRAINING_LOG_DOCUMENTATION.md  environment.full.yml  finetune_main.py  finetune_trainer.py  install_eegmamba.sh  optimize_weight_decay.py  pretrain_main.py  pyproject.toml  quick_example.py  requirements.txt  requirements.yml
datasets/: modma_dataset.py  physio_dataset.py  pretraining_dataset.py
models/: eegmamba.py  model_for_bciciv2a.py  model_for_chb.py  model_for_faced.py  model_for_isruc.py  model_for_modma.py  model_for_mumtaz.py  model_for_physio.py  model_for_seedv.py  model_for_seedvig.py  model_for_shu.py  model_for_speech.py  model_for_stress.py  model_for_tuab.py  model_for_tuev.py
preprocessing/: README.md
preprocessing/preprocessing_for_finetuning/: preprocessing_modma.py  preprocessing_tuev.py
preprocessing/preprocessing_for_pretraining/: preprocessing_p2018_for_pretraining.py  preprocessing_raw_for_pretraining.py  preprocessing_siena_for_pretraining.py  preprocessing_szbd_for_pretraining.py
pretrained_weights/: README.md
